# web-app

./: .gitattributes  .gitignore  Cargo.toml  README.md  ROADMAP.md  Trunk.toml  agenda.css  build.rs  index.html  post-build.sh  settings.html  yew-template.toml
app/: index.html
app/src/: app.rs  initializer.mjs  main.css  main.rs  pages.rs  prelude.rs  slider.rs  translation.rs  util.rs
app/styles/: themes.css  waiting-screen.css
common/: README.md
common/src/: announcements.rs  events.rs  friends.rs  groups.rs  homeworks.rs  lib.rs  location.rs  password.rs  prelude.rs  store.rs  surveys.rs  user_desc.rs  user_info.rs
locales/: en.po
src/: agenda.rs  alert.rs  announcements.rs  app.rs  calendar.rs  change_data.rs  change_password.rs  colors.rs  crash_handler.rs  edit_email.rs  event.rs  glider_selector.rs  main.css  main.rs  pages.rs  popup.rs  prelude.rs  settings.rs  slider.rs  test.html  translation.rs  util.rs
src/advent/: gifts.json  gifts.rs  mod.rs
src/agenda/: agenda.css  agenda.html  agenda.rs
src/alert/: alert.css  alert.rs
src/announcement/: announcement.css  announcement.rs
src/api/: announcements.rs  auth.rs  colors.rs  error.rs  friends.rs  generic.rs  groups.rs  load_events.rs  logout.rs  mod.rs  schedule.rs  textbook.rs  user_info.rs
src/calendar/: calendar.css  calendar.html  calendar.rs
src/change_data/: change_data.html  change_data.rs
src/checkbox/: checkbox.css  checkbox.rs
src/comment/: comment.css  comment.html  comment.rs
src/crash/: crash.html
src/email-verification/: email_verification.css  email_verification.html  email_verification.rs
src/event/: event.html  event.rs  events.css
src/flag/: flag.rs
src/force-click/: force_click.css  force_click.html  force_click.rs
src/friends/: friends.css  friends.html  friends.rs  friends_loading.html
src/glider_selector/: glider-selector.css  glider_selector.rs
src/halving/: halving.css  halving.rs
src/mastodon/: mastodon.rs
src/pixelwar/: pixelwar.rs
static/: add-pwa.js  index.html  manifest-en.json  manifest-fr.json  robots.txt  sitemap.xml  sw.js  theme-toggle.js
styles/: ad.css  agenda.css  alert.css  announcement.css  announcements.css  calendar.css  common.css  events.css  glider-selector.css  main.css  popup.css  settings.css  themes.css  waiting-screen.css
templates/: agenda.html  change_data.html  crash.html  settings.html
(+90 files in other folders)
