[package]
name = "web-app"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = "0.18"
wasm-bindgen = {version="0.2", features=["serde-serialize"]}
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
chrono = {version="0.4", features=["wasmbind"]}
anyhow = "1.0"
agenda-parser = {path="../agenda-parser"}
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Storage",
    "History",
    "PopStateEvent",
    "Crypto",
    "Document",
    "Element",
    "HtmlCollection",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "CssStyleDeclaration",
    "Request",
    "Headers",
    "Response",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
