[package]
name = "web-app"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = "0.19"
yew-template = "0.1"
wasm-bindgen = {version="0.2", features=["serde-serialize"]}
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
chrono = {version="0.4", features=["wasmbind"]}
chrono-tz = "0.6"
anyhow = "1.0"
common = {path="../common"}
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
lazy_static = "1.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Storage",
    "History",
    "PopStateEvent",
    "Crypto",
    "Document",
    "Element",
    "HtmlCollection",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "CssStyleDeclaration",
    "Request",
    "RequestInit",
    "Headers",
    "Response",
    "DomRect",
    "Navigator",
    "ServiceWorkerContainer",
    "HtmlSelectElement",
    "HtmlOptionsCollection",
    "HtmlOptionElement",
    "HtmlElement",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
